--- a/package.json
+++ b/package.json
@@ -45,9 +45,7 @@
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@sendgrid/mail": "^8.1.5",
-    "@supabase/supabase-js": "^2.57.4",
-    "@swc/core": "^1.13.5",
-    "@swc/helpers": "^0.5.17",
+    "@supabase/supabase-js": "^2.55.0",
     "@tanstack/react-query": "^5.60.5",
     "@testing-library/jest-dom": "^6.8.0",
     "@types/cors": "^2.8.19",
@@ -71,7 +69,7 @@
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
-    "drizzle-orm": "^0.39.3",
+    "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
@@ -89,7 +87,6 @@
     "nodemailer": "^7.0.5",
     "openai": "^5.16.0",
     "openid-client": "^6.6.4",
-    "p-limit": "^7.1.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "playwright": "^1.54.2",
@@ -108,7 +105,6 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.4.1",
-    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
@@ -126,21 +122,21 @@
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
-    "@types/node": "^20.16.11",
+    "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
-    "@vitejs/plugin-react": "^4.7.0",
+    "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.30.4",
-    "esbuild": "^0.25.9",
+    "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
-    "typescript": "^5.9.2",
-    "vite": "^5.4.20"
+    "typescript": "^5.6.3",
+    "vite": "^5.4.19"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
